@@ -7,6 +7,8 @@ Included
 - GitHub Actions integration added for deterministic CI artifact-meter runs:
 - Added workflow: `.github/workflows/weftend_artifact_meter.yml`
 - Workflow runs `safe-run` (analysis-only, `--withhold-exec`) with optional compare and uploads `out/ci_meter` artifacts.
+- Added workflow: `.github/workflows/weftend_verify360.yml`
+- Workflow runs strict managed verify gate (`npm run verify:360:release:managed`) and uploads `out/verify_360_release_managed` artifacts.
 - Added usage guide: `docs/GITHUB_ACTIONS.md`
 - 360 commit gate added:
 - `npm run verify:360` now performs compile/test/proofcheck + deterministic replay + privacy lint + compare smoke.
@@ -35,6 +37,7 @@ Included
 - Added Green Team workflow contract test for `.github/workflows/weftend_artifact_meter.yml` to enforce analysis-only (`--withhold-exec`) and bounded artifact-output workflow invariants in test/proofcheck loops.
 - Added Green Team managed-release-helper contract test for `scripts/verify_360_release_managed.js` to pin strict preflight semantics and prevent adapter-disable env leakage into full verify runs.
 - Added Green Team container local-only contract test for `src/runtime/container/docker_probe_v0.ts` to pin allowed Docker command surface (`version`, `image inspect`) and block implicit pull/login/run/build paths.
+- Added Green Team contract test for `.github/workflows/weftend_verify360.yml` to pin managed-verify workflow behavior and artifact upload path.
 - Emergency verify report path now preserves policy context lines (`policy.*`) so fail-closed receipts remain operator-readable under write-path fallback.
 - Safe-run now enforces a non-blocking evidence corridor check before completion:
 - Expected receipt artifacts are verified for presence and digest consistency.
